# ducktools-jsonkit

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto_test.yml  publish_to_pypi.yml  publish_to_testpypi.yml
performance/: attrs_serializers_compared.py  dataclass_serializers_compared.py  dataclass_serializers_compared_noorjson.py  dataclass_serializers_compared_orjson.py  dataclass_serializers_speedup.py  dumps_vs_encode.py  exec_vs_code.py  exec_vs_code_method.py  getattr_vs_access.py
readme_examples/: metadefault.py  methods.py  register.py  slots.py  slotted.py
src/: json_defaults.py
src/ducktools/: jsondefaults.py
src/ducktools/jsonkit/: __init__.py  __init__.pyi  _caching_tools.py  _caching_tools.pyi
src/json_defaults/: __init__.py  _metadefault.py  dataclasses.py  metadefault.py  methods.py  register.py  slotted.py
tests/: test_dataclasses.py  test_mergedefaults.py  test_metadefault.py  test_methods.py  test_register.py
