[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name="ducktools-jsonkit"
description="Utilities to assist in serializing arbitrary python classes to JSON"
authors = [
  { name="David C Ellis" },
]
license = "MIT"
readme="README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Operating System :: OS Independent",
]
dependencies = [
    "ducktools-lazyimporter>=0.7.3",
    "ducktools-classbuilder>=0.9.1",
]
dynamic = ['version']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/ducktools/jsonkit/_version.py"
version_file_template = """
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""

[project.optional-dependencies]
docs = [
    "sphinx>=8.1",
    "myst-parser>=4.0",
    "sphinx_rtd_theme>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/davidcellis/ducktools-jsonkit"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.1",
    "mypy>=1.16",
]

[tool.pytest.ini_options]
addopts= "--cov=src/ --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.uv.exclude-newer-package]
# Exclude other projects I own as they may contain early fixes
ducktools-classbuilder = "1 hour"
reannotate = "1 hour"
